<resources>
    <string name="app_name">Travel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Traveler app</string>
    <string name="nav_header_subtitle">Travel and excursion planning</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_list">List</string>
    <string name="menu_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marker_name">Marker name</string>
    <string name="marker_text">Marker text</string>
    <string name="button_save_marker">Save</string>
    <string name="coords">Coords: %1$s, %2$s</string>
    <string name="marker_saved">Marker saved</string>
    <string name="button_remove_marker">Remove</string>
    <string name="marker_removed">Marker removed</string>
</resources>